tests/baselines/reference/typeInfer1.errors.txt
tests/cases/compiler/typeInfer1.ts(12,5): error TS2322: Type '{ Moo: () => string; }' is not assignable to type 'ITextWriter2'.
  Object literal may only specify known properties, and 'Moo' does not exist in type 'ITextWriter2'.


==== tests/cases/compiler/typeInfer1.ts (1 errors) ====
    interface ITextWriter2 {
        Write(s:string):void;
        WriteLine(s:string):void;
    }
    
    var x: ITextWriter2 = {
        Write: function (s:string):void {},
        WriteLine: function(s:string):void {}
    }
    
    var yyyyyyyy: ITextWriter2 = {
        Moo: function() { return "cow"; }
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ {|Moo|0|}: () => string; }' is not assignable to type '{|ITextWriter2|1|}'.
!!! error TS2322:   Object literal may only specify known properties, and 'Moo' does not exist in type 'ITextWriter2'.
!!! annotated symbol 0 tests/cases/compiler/typeInfer1.ts:12:5
!!! annotated symbol 1 tests/cases/compiler/typeInfer1.ts:1:11
    }